@@ -38,14 +38,12 @@ G_DEFINE_TYPE (CCMDisplay, ccm_display, G_TYPE_OBJECT);
 enum
 {
 	CCM_DISPLAY_OPTION_USE_XSHM,
-	CCM_DISPLAY_OPTION_USE_BUFFERED,
 	CCM_DISPLAY_UNMANAGED_SCREEN,
 	CCM_DISPLAY_OPTION_N
 };
 
 static gchar* CCMDisplayOptions[CCM_DISPLAY_OPTION_N] = {
 	"use_xshm",
-	"use_buffered_pixmap",
 	"unmanaged_screen"
 };
 
@@ -308,14 +306,6 @@ _ccm_display_use_xshm(CCMDisplay* self)
 		   self->priv->shm.available;
 }
 
-gboolean
-_ccm_display_use_buffered(CCMDisplay* self)
-{
-	g_return_val_if_fail(self != NULL, FALSE);
-	
-	return ccm_config_get_boolean(self->priv->options[CCM_DISPLAY_OPTION_USE_BUFFERED]);
-}
-
 void
 _ccm_display_register_damage(CCMDisplay* self, XID damage, 
 							 CCMDamageFunc func, gpointer data)
@@ -432,7 +422,7 @@ ccm_display_new(gchar* display)
 			
 			for (item = unmanaged; item; item = item->next)
 			{
-				if ((gint)item->data == cpt)
+				if (GPOINTER_TO_INT(item->data) == cpt)
 				{
 					found = TRUE;
 					break;
